assets/css/style.css
 /**
    * LOADER CSS
.loader, .loader:after {border-radius: 50%;width: 10em;height: 10em;}
.loader {margin: 60px auto;font-size: 10px;position: relative;text-indent: -9999em;border-top: 1.1em solid rgba(255, 255, 255, 0.2);border-right: 1.1em solid rgba(255, 255, 255, 0.2);border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);border-left: 1.1em solid #ffffff;-webkit-transform: translateZ(0);-ms-transform: translateZ(0);transform: translateZ(0);-webkit-animation: load8 1.1s infinite linear;animation: load8 1.1s infinite linear;margin-top:20%;}
@-webkit-keyframes load8 {
    0% {-webkit-transform: rotate(0deg);transform: rotate(0deg);}
    100% {-webkit-transform: rotate(360deg);transform: rotate(360deg);}
}
@keyframes load8 {
    0% {-webkit-transform: rotate(0deg);transform: rotate(0deg);}
    100% {-webkit-transform: rotate(360deg);transform: rotate(360deg);}
}
#loadingDiv {position:fixed;padding:0;margin:0;top:0;left:0;width: 100%;height: 100%;background:rgb(10 0 0);z-index: 99;}
**/
.xploadhide{display:none !important;}
.xploadshow{display:block !important;}
/**
    * REMOVE ADMIN BAR
**/
#wpadminbar{display:none !important;}
html{
    height: 0 !important;
    background-image: none !important;
    background-repeat: no-repeat !important;
    background-attachment: unset !important;
    min-height: -webkit-fill-available !important;
}
/*REMOVE SIDEBAR BB PRESS*/
body{min-height: -webkit-fill-available !important;background-image: url(../images/lt-webinar-bg.png);background-size: cover;background-position: center;    margin-top: -2.2vw !important;}
body.bb-buddypanel.buddypanel-open:not(.elementor-template-canvas) .elementor-section-boxed[style*=width], body.bb-buddypanel.buddypanel-open:not(.elementor-template-canvas) .elementor-section-full_width[style*=width], body.bb-buddypanel.buddypanel-open:not(.elementor-template-canvas) .elementor-section-stretched[style*=width]{padding-left:0px !important;}
.crisp-client{display:none !important;}
.amaran-wrapper.right{display:none !important;}
body.bb-buddypanel:not(.elementor-template-canvas) .elementor-section-boxed[style*=width], body.bb-buddypanel:not(.elementor-template-canvas) .elementor-section-full_width[style*=width], body.bb-buddypanel:not(.elementor-template-canvas) .elementor-section-stretched[style*=width]{
    padding-left:0px !important;
}
/** 
    * SCROLLBAR CSS
**/
.xploadscrollbar::-webkit-scrollbar-track{-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);background-color: #F5F5F5;}
.xploadscrollbar::-webkit-scrollbar{width: 10px;background-color: #F5F5F5;}
.xploadscrollbar::-webkit-scrollbar-thumb{background-color: #000000;border: 2px solid #555555;}
/**
    * LOADER
**/
.loader{position: fixed;left: 0px;top: 0px;width: 100%;height: 100%;z-index: 9999;background: url('/wp-content/uploads/2021/04/Slide3__LiveSessioinBeginning.png') 50% 50% no-repeat #fff;}
    /*.elementor-editor-active .loader{
    display: none;
    }*/
/**
    * WEBINAR CONTAINER
**/
.xploadwebinar-container{width: 95%;margin: 0 auto;height: auto;}
#webinarHead .right{padding-top: 1.5vh;display: flex;float: right;}
#webinarHead #xploadVideoCapture{background-color: #4CAF50;border: none;color: white;padding: 10px 20px;text-align: center;text-decoration: none;display: inline-block;font-size: 14px;margin: 4px 2px;cursor: pointer;}
#webinarHead #xploadVideoCapturePause{background-color: #ffc107;border: none;color: white;padding: 10px 20px;text-align: center;text-decoration: none;display: inline-block;font-size: 14px;margin: 4px 2px;cursor: pointer;}
#webinarHead #xploadVideoCaptureStop{background-color: #f44336;border: none;color: white;padding: 10px 20px;text-align: center;text-decoration: none;display: inline-block;font-size: 14px;margin: 4px 2px;cursor: pointer;}
/** 
    * XPload Main Video Container
**/
/** Change made recent **/
.xploadwebinar-container .webinar-container .xploadvideo-container{margin-bottom:.5%;}
.elementor embed, .elementor iframe, .elementor object, .elementor video{width:100% !important;height: 100%;}
#xprowebinar-subscriber{height: 27.6vw;object-fit: cover;position: relative;}
#xprowebinarPublisherCamera{height: 10.4vw;object-fit: cover;}
/** 
    * Xpload Webinar Video, Chat and Notification Container
**/
.xploadwebinar-container .webinar-container .xploadchatnotif-container{display:flex;padding-left:.222vw !important;}
/*Avatar*/
/** Change made recent **/
.avatar-container{width:100%;display: flex;justify-content: space-evenly;height: auto;}
.avatar-container .avatar{width:33%;border-radius: unset !important;}
.avatar-container .avatar h3{margin:0;color:#fff;font-size: .8vw;padding-left:1em;background-color: #331f5c;width: 100%;}
.avatar-container .avatar img{height: 100%;width: 100%;box-shadow:0px 3px 3px rgb(41 41 41 / 73%);}
.avatar-container #avatar2{background-color: #000;border-radius: unset;width:33%;box-shadow:0px 3px 3px rgb(41 41 41 / 73%);}
.avatar-container #avatar2 label{color:#fff;}
.avatar-container #avatar2 .selectvidimage{display: flex;position: absolute;background-color: #322663;border-radius: unset;width: 65%;box-shadow: 0px 3px 3px rgb(41 41 41 / 73%);padding: .5%;opacity:0;z-index: 9990;}
.avatar-container #avatar2:hover .selectvidimage{opacity: 1;}
.selectvidimage #videoShow input{margin: 0 !important;}
.selectvidimage #imageshow input{margin: 0 !important;}
#xprowebinarPublisherImage{width:100% !important;height: 22vh !important;}
/*Notification*/
/** Change made recent **/
.xploadchatnotif-container .notification-container{padding-right:.5% !important;padding-left:0px !important;}
.notification-container .notificationBox{height: 100%;max-height: 100%;overflow-y:scroll;background: rgba(146, 121, 110, 0.26);border: solid 1px #BDBDBD;padding:2%;margin: 0px !important;background-image:url("../images/chat%20box.jpg");background-size: 100% 100%;background-repeat: no-repeat;}
.actual_msg p{font-size:.7vw;}
.notification-container .notificationBox .actual_msg img{float:none !important;}
/* ... */

